[gd_scene load_steps=19 format=3 uid="uid://v2uuacjxertg"]

[ext_resource type="Script" path="res://room.gd" id="1_f7l4p"]
[ext_resource type="Texture2D" uid="uid://cmfv7o8lhs58j" path="res://BoardFloor.png" id="1_hy8yo"]
[ext_resource type="Script" path="res://CameraController.gd" id="1_ywjjg"]
[ext_resource type="PackedScene" uid="uid://vvvity1q5gyy" path="res://UI.tscn" id="3_el4ln"]
[ext_resource type="PackedScene" uid="uid://cdrr1i787t5ih" path="res://UI/barn_menu.tscn" id="4_n7g4d"]
[ext_resource type="PackedScene" uid="uid://jcjx34gw0m5g" path="res://meters.tscn" id="5_3xsa7"]
[ext_resource type="PackedScene" uid="uid://cyr1omf26jp0t" path="res://money_display.tscn" id="6_348x3"]
[ext_resource type="PackedScene" uid="uid://ce2367waosbib" path="res://horse.tscn" id="6_ca5yv"]
[ext_resource type="PackedScene" uid="uid://c85ifvcip3ctl" path="res://extra_sturdy_horsie_fence.tscn" id="9_jijlc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eph6d"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6myf3"]
albedo_texture = ExtResource("1_hy8yo")
uv1_scale = Vector3(17.08, 17.08, 17.08)

[sub_resource type="BoxMesh" id="BoxMesh_6rcvr"]
material = SubResource("StandardMaterial3D_6myf3")
size = Vector3(100, 1, 100)

[sub_resource type="BoxShape3D" id="BoxShape3D_c56yb"]
size = Vector3(68.4625, 1, 67.877)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5lnff"]

[sub_resource type="Sky" id="Sky_436a5"]
sky_material = SubResource("ProceduralSkyMaterial_5lnff")
process_mode = 1

[sub_resource type="Environment" id="Environment_3sxiu"]
background_mode = 2
sky = SubResource("Sky_436a5")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ee2rd"]
albedo_color = Color(0, 0.654902, 0.12549, 1)

[sub_resource type="PlaneMesh" id="PlaneMesh_7ucxg"]
material = SubResource("StandardMaterial3D_ee2rd")
size = Vector2(1000, 1000)

[node name="Room" type="Node3D"]
script = ExtResource("1_f7l4p")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("BoxShape3D_eph6d")

[node name="MeshInstance3D" type="MeshInstance3D" parent="StaticBody3D"]
mesh = SubResource("BoxMesh_6rcvr")

[node name="Camera3D" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 0.963854, 0.266431, 0, -0.266431, 0.963854, 2.08033, 7.13571, 37.9357)
script = ExtResource("1_ywjjg")
target = NodePath("../Horse")
speed = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" parent="CanvasLayer" instance=ExtResource("3_el4ln")]

[node name="BarnMenu" parent="CanvasLayer" instance=ExtResource("4_n7g4d")]
mouse_filter = 1

[node name="Meters" parent="CanvasLayer" instance=ExtResource("5_3xsa7")]
anchors_preset = -1
anchor_top = 0.836
anchor_right = 0.206
offset_top = 39.272
offset_right = -43.312

[node name="Money Display" parent="CanvasLayer" instance=ExtResource("6_348x3")]
anchors_preset = -1
anchor_left = 0.913
anchor_top = 0.917
offset_left = 0.223999
offset_top = -0.216064
offset_right = -49.0
offset_bottom = -29.0
scale = Vector2(2, 2)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.72815, 5.20161, 54.5101)

[node name="Horse" parent="." instance=ExtResource("6_ca5yv")]
transform = Transform3D(2.165, 0, 0, 0, 2.165, 0, 0, 0, 2.165, 0, 3.49904, 20.0038)

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.19904, 28.2054, -1.2527)
shape = SubResource("BoxShape3D_c56yb")

[node name="LoveTimer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_3sxiu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="WorldEnvironment"]
transform = Transform3D(0.630202, 0.776432, 0, -0.741339, 0.601718, 0.297242, 0.230788, -0.187322, 0.954802, 0, 13.998, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("PlaneMesh_7ucxg")

[node name="Extra_sturdy_horsie_fence" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.7763, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence2" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5366, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence3" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.36774, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence4" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.128, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence5" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.1351, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence6" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.10464, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence7" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.27349, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence8" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12.5132, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence9" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.6411, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence10" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.8809, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence11" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -28.0497, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence12" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -33.2895, 0.5, 48.9771)

[node name="Extra_sturdy_horsie_fence13" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -38.4477, 0.512793, 49.0052)

[node name="Extra_sturdy_horsie_fence15" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -48.7592, 0.512793, 49.0052)

[node name="Extra_sturdy_horsie_fence14" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.6875, 0.512793, 49.0052)

[node name="Extra_sturdy_horsie_fence56" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.3765, 0.5, 19.3779)

[node name="Extra_sturdy_horsie_fence57" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.4444, 0.5, 14.1386)

[node name="Extra_sturdy_horsie_fence58" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.5114, 0.5, 8.97016)

[node name="Extra_sturdy_horsie_fence59" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.5794, 0.5, 3.73086)

[node name="Extra_sturdy_horsie_fence60" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.5793, 0.5, 3.73795)

[node name="Extra_sturdy_horsie_fence61" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.6472, 0.5, -1.50134)

[node name="Extra_sturdy_horsie_fence62" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.7143, 0.5, -6.66975)

[node name="Extra_sturdy_horsie_fence63" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.7822, 0.5, -11.9091)

[node name="Extra_sturdy_horsie_fence64" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.8487, 0.5, -17.0365)

[node name="Extra_sturdy_horsie_fence65" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.9167, 0.5, -22.2758)

[node name="Extra_sturdy_horsie_fence66" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 48.9837, 0.5, -27.4442)

[node name="Extra_sturdy_horsie_fence67" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 49.0516, 0.5, -32.6835)

[node name="Extra_sturdy_horsie_fence68" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 49.0904, 0.512793, -37.8417)

[node name="Extra_sturdy_horsie_fence69" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 49.2241, 0.512793, -48.1523)

[node name="Extra_sturdy_horsie_fence70" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.0129673, 0, -0.999916, 0, 1, 0, 0.999916, 0, -0.0129673, 49.1584, 0.512793, -43.081)

[node name="Extra_sturdy_horsie_fence16" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1779, 0.5, -18.2086)

[node name="Extra_sturdy_horsie_fence17" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1803, 0.5, -12.9689)

[node name="Extra_sturdy_horsie_fence18" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1826, 0.5, -7.80004)

[node name="Extra_sturdy_horsie_fence19" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.185, 0.5, -2.5603)

[node name="Extra_sturdy_horsie_fence20" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.185, 0.5, -2.5674)

[node name="Extra_sturdy_horsie_fence21" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1874, 0.5, 2.67234)

[node name="Extra_sturdy_horsie_fence22" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1897, 0.5, 7.84118)

[node name="Extra_sturdy_horsie_fence23" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1921, 0.5, 13.0809)

[node name="Extra_sturdy_horsie_fence24" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1944, 0.5, 18.2088)

[node name="Extra_sturdy_horsie_fence25" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1968, 0.5, 23.4486)

[node name="Extra_sturdy_horsie_fence26" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1991, 0.5, 28.6174)

[node name="Extra_sturdy_horsie_fence27" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.2015, 0.5, 33.8571)

[node name="Extra_sturdy_horsie_fence28" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1758, 0.512793, 39.0154)

[node name="Extra_sturdy_horsie_fence29" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1805, 0.512793, 49.3269)

[node name="Extra_sturdy_horsie_fence30" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1782, 0.512793, 44.2552)

[node name="Extra_sturdy_horsie_fence32" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1991, 0.5, -44.3346)

[node name="Extra_sturdy_horsie_fence33" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.2015, 0.5, -39.0949)

[node name="Extra_sturdy_horsie_fence34" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1758, 0.512793, -33.9366)

[node name="Extra_sturdy_horsie_fence35" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1805, 0.512793, -23.6251)

[node name="Extra_sturdy_horsie_fence36" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(0.000453763, 0, 1, 0, 1, 0, -1, 0, 0.000453763, -49.1782, 0.512793, -28.6969)

[node name="Extra_sturdy_horsie_fence31" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -18.0527, 0.5, -49.1999)

[node name="Extra_sturdy_horsie_fence37" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -12.8131, 0.5, -49.171)

[node name="Extra_sturdy_horsie_fence38" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -7.6443, 0.5, -49.1425)

[node name="Extra_sturdy_horsie_fence39" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -2.40464, 0.5, -49.1136)

[node name="Extra_sturdy_horsie_fence40" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -2.41174, 0.5, -49.1136)

[node name="Extra_sturdy_horsie_fence41" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 2.82792, 0.5, -49.0847)

[node name="Extra_sturdy_horsie_fence42" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 7.99669, 0.5, -49.0562)

[node name="Extra_sturdy_horsie_fence43" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 13.2364, 0.5, -49.0273)

[node name="Extra_sturdy_horsie_fence44" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 18.3642, 0.5, -48.999)

[node name="Extra_sturdy_horsie_fence45" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 23.6038, 0.5, -48.9701)

[node name="Extra_sturdy_horsie_fence46" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 28.7726, 0.5, -48.9416)

[node name="Extra_sturdy_horsie_fence47" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 34.0123, 0.5, -48.9127)

[node name="Extra_sturdy_horsie_fence48" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 39.1706, 0.512793, -48.9124)

[node name="Extra_sturdy_horsie_fence49" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 49.4819, 0.512793, -48.8555)

[node name="Extra_sturdy_horsie_fence50" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, 44.4103, 0.512793, -48.8835)

[node name="Extra_sturdy_horsie_fence51" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -44.1785, 0.5, -49.3109)

[node name="Extra_sturdy_horsie_fence52" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -38.9388, 0.5, -49.282)

[node name="Extra_sturdy_horsie_fence53" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -33.7805, 0.512793, -49.2816)

[node name="Extra_sturdy_horsie_fence54" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -23.4692, 0.512793, -49.2247)

[node name="Extra_sturdy_horsie_fence55" parent="." instance=ExtResource("9_jijlc")]
transform = Transform3D(-0.999985, 0, 0.0055152, 0, 1, 0, -0.0055152, 0, -0.999985, -28.5408, 0.512793, -49.2527)

[connection signal="button_down" from="CanvasLayer/Control/ActivitiesWindow/Button" to="." method="_on_button_button_down"]
[connection signal="timeout" from="LoveTimer" to="." method="_on_love_timer_timeout"]

[editable path="CanvasLayer/Control"]
